# MotherServer

./: AddingTasks.html  AddingTasks.js  CMakeLists.txt  ReceivingStuff.py  UpdateServer.sh  server.cpp
PublicServer/: AddingTasks.html  AddingTasks.js  index.html
